--- a/res/layout/game_board_activity.xml
+++ b/res/layout/game_board_activity.xml
@@ -12,22 +12,22 @@
                   android:layout_alignParentBottom="true">
 
         <Button android:layout_width="0dip"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onButtonLeftClick"
                 android:text="@string/left"/>
         <Button android:layout_width="0dip"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onButtonDownClick"
                 android:text="@string/down"/>
         <Button android:layout_width="0dip"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onButtonRotateClick"
                 android:text="@string/rotate"/>
         <Button android:layout_width="0dip"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onButtonRightClick"
                 android:text="@string/right"/>
@@ -38,6 +38,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/linear_container_button"
-            android:background="#000000"/>
+            />
 </RelativeLayout>
 
