--- a/res/layout/game_board_activity.xml
+++ b/res/layout/game_board_activity.xml
@@ -4,6 +4,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <Button android:id="@+id/button_start_pause"
+            android:text="@string/start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:onClick="onButtonStartClick"/>
+
     <LinearLayout android:id="@+id/linear_container_button"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
