gestion du game over

--- a/res/layout/game_board_activity.xml
+++ b/res/layout/game_board_activity.xml
@@ -5,7 +5,6 @@
                 android:layout_height="match_parent">
 
 
-
     <LinearLayout android:id="@+id/linear_container_button"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -47,5 +46,24 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:onClick="onButtonStartClick"/>
+    <RelativeLayout android:id="@+id/gameover_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#99000000"
+                    android:visibility="gone">
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="@string/gameover"
+                  android:id="@+id/textView_gameover"
+                  android:textSize="25dip"
+                  android:textColor="#FFFFFF"
+                  android:layout_centerInParent="true"/>
+        <Button android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/restart"
+                android:layout_below="@id/textView_gameover"
+                android:onClick="onButtonRestartClick"
+                android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 </RelativeLayout>
 
